@@ -42,7 +42,8 @@ class WeblinksViewForm extends JViewLegacy
 		}
 		else
 		{
-			$authorised = $user->authorise('core.edit', 'com_weblinks.weblink.'.$this->item->id);
+			$authorised = $user->authorise('core.edit','com_weblinks.category.'.$this->item->catid);
+
 		}
 
 		if ($authorised !== true)
