@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#31211] Add Tooltip for mod_latest. Thanks Tobias Zulauf.
  # [#31217] Removed useless title on ID checkboxes. Thanks Peter van Westen.
  ^ [#31209] Add the Tooltip for "Clear" at Joomla! Help. Thanks Tobias Zulauf.
+ # [#31148] wrong check for permissions to edit weblinks in frontend. Thanks Philippe Saint-Pierre and Tobias Zulauf
 
 23-Jun-2013 Jean-Marie Simonet
  # [#31137] Changed tooltip html behavior back to pre-bootstrap 2.3.2 (so default on). Thanks Peter van Westen.
